Upgrade home certifications section with real certificate links

--- a/index.html
+++ b/index.html
@@ -238,27 +238,56 @@ Driven by curiosity and innovation, I constantly explore how AI and automation c
           <!-- Certifications Section -->
           <div class="content-section" id="certifications">
             <h2>Certifications & Achievements</h2>
+            <p class="cert-intro">Verified certificates with direct preview and download links.</p>
             <div class="cert-grid">
-              <div class="cert-card">
-                <img src="assets/images/web.jpg" alt="Full-Stack Web Development">
-                <h3>Full-Stack Web Development</h3>
-                <p>Completed a comprehensive web development course covering React, Django, and APIs.</p>
-              </div>
-              <div class="cert-card">
-                <img src="assets/images/ux.jpg" alt="UI/UX Design Essentials">
-                <h3>UI/UX Design Essentials</h3>
-                <p>Learned modern design systems, wireframing, and prototyping techniques.</p>
-              </div>
-              <div class="cert-card">
-                <img src="assets/images/network2.jpg" alt="Cloud & Networking">
-                <h3>Cloud & Networking</h3>
-                <p>Certified in cloud infrastructure, networking fundamentals, and automation practices.</p>
-              </div>
-              <div class="cert-card">
-                <img src="assets/images/ai2.jpg" alt="AI & Automation">
-                <h3>AI &amp; Automation</h3>
-                <p>Gained skills in AI integration, chatbots, and workflow automation tools.</p>
-              </div>
+              <article class="cert-card">
+                <div class="cert-card-head">
+                  <span class="cert-issuer">LinkedIn Learning</span>
+                  <span class="cert-label">PDF</span>
+                </div>
+                <h3>Career Essentials in System Administration</h3>
+                <p>Issued by Microsoft and LinkedIn. Focused on core system administration workflows.</p>
+                <div class="cert-actions">
+                  <a class="cert-btn cert-btn-primary" href="assets/images/Certifications/CertificateOfCompletion_Career Essentials in System Administration by Microsoft and LinkedIn.pdf" target="_blank" rel="noopener">View Certificate</a>
+                  <a class="cert-btn" href="assets/images/Certifications/CertificateOfCompletion_Career Essentials in System Administration by Microsoft and LinkedIn.pdf" download>Download</a>
+                </div>
+              </article>
+              <article class="cert-card">
+                <div class="cert-card-head">
+                  <span class="cert-issuer">Data Science</span>
+                  <span class="cert-label">PDF</span>
+                </div>
+                <h3>Data Science Essentials with Python</h3>
+                <p>Foundational data analysis, Python workflows, and practical problem solving.</p>
+                <div class="cert-actions">
+                  <a class="cert-btn cert-btn-primary" href="assets/images/Certifications/Data_Science_Essentials_with_Python_certificate_ebst5-13408-24-student-tharaka-ac-ke_5d3c3ada-e08d-4caf-a332-99080acc2796 (1).pdf" target="_blank" rel="noopener">View Certificate</a>
+                  <a class="cert-btn" href="assets/images/Certifications/Data_Science_Essentials_with_Python_certificate_ebst5-13408-24-student-tharaka-ac-ke_5d3c3ada-e08d-4caf-a332-99080acc2796 (1).pdf" download>Download</a>
+                </div>
+              </article>
+              <article class="cert-card">
+                <div class="cert-card-head">
+                  <span class="cert-issuer">Cisco Networking</span>
+                  <span class="cert-label">PDF</span>
+                </div>
+                <h3>Getting Started with Cisco Packet Tracer</h3>
+                <p>Hands-on networking labs covering topologies, routing, and device simulation.</p>
+                <div class="cert-actions">
+                  <a class="cert-btn cert-btn-primary" href="assets/images/Certifications/Getting_Started_with_Cisco_Packet_Tracer_certificate_kelvinkiambi35-gmail-com_4c72a6b3-129c-4142-a286-907543083576.pdf" target="_blank" rel="noopener">View Certificate</a>
+                  <a class="cert-btn" href="assets/images/Certifications/Getting_Started_with_Cisco_Packet_Tracer_certificate_kelvinkiambi35-gmail-com_4c72a6b3-129c-4142-a286-907543083576.pdf" download>Download</a>
+                </div>
+              </article>
+              <article class="cert-card">
+                <div class="cert-card-head">
+                  <span class="cert-issuer">Professional Development</span>
+                  <span class="cert-label">PDF</span>
+                </div>
+                <h3>Additional Certification Record</h3>
+                <p>Supplementary certified coursework included in portfolio verification documents.</p>
+                <div class="cert-actions">
+                  <a class="cert-btn cert-btn-primary" href="assets/images/Certifications/certificate (1).pdf" target="_blank" rel="noopener">View Certificate</a>
+                  <a class="cert-btn" href="assets/images/Certifications/certificate (1).pdf" download>Download</a>
+                </div>
+              </article>
             </div>
           </div>
         </div>
