--- a/skills.html
+++ b/skills.html
@@ -212,6 +212,16 @@
         </div>
       </div>
     </section>
+
+    <section class="skills-cta" data-reveal>
+      <div class="container">
+        <div class="cta-panel">
+          <h2>Let's Work Together</h2>
+          <p>Got a project in mind? I am open to freelance work and meaningful collaborations. Drop me a message and we will scope it clearly.</p>
+          <a href="contact.html" class="btn primary cta-btn">Contact Me</a>
+        </div>
+      </div>
+    </section>
   </main>
 
   <!-- ================= Footer ================= -->
